--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Jony</title>
+    <title>contact</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="img/project.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -42,7 +43,7 @@
                                 <div class="col-xl-3 col-lg-2">
                                     <div class="logo">
                                         <a href="index.html">
-                                            <img src="img/logo.png" alt="">
+                                            <img src="img/henry1.png" alt="">
                                         </a>
                                     </div>
                                 </div>
@@ -51,32 +52,13 @@
                                         <nav>
                                             <ul id="navigation">
                                                 <li><a href="index.html">home</a></li>
-                                                <li><a href="Works.html">Works</a></li>
                                                 <li><a href="Services.html">Services</a></li>
-                                                <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                        <li><a href="works_details.html">work details</a></li>
-                                                        <li><a href="elements.html">elements</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a href="about.html">about</a></li>
-                                                <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                        <li><a href="blog.html">blog</a></li>
-                                                        <li><a href="single-blog.html">single-blog</a></li>
-                                                    </ul>
-                                                </li>
                                                 <li><a href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </div>
                                 </div>
                                 <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                    <div class="Appointment">
-                                        <div class="book_btn d-none d-lg-block">
-                                            <a href="#">Let’s Talk</a>
-                                        </div>
-                                    </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="mobile_menu d-block d-lg-none"></div>
@@ -96,7 +78,7 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="bradcam_text text-center">
-                                    <h3>contact</h3>
+                                    <h3>Let the Talk Begin</h3>
                                 </div>
                             </div>
                         </div>
@@ -106,33 +88,6 @@
   <!-- ================ contact section start ================= -->
   <section class="contact-section section_padding">
     <div class="container">
-      <div class="d-none d-sm-block mb-5 pb-4">
-        <div id="map" style="height: 480px;"></div>
-        <script>
-          function initMap() {
-            var uluru = {lat: -25.363, lng: 131.044};
-            var grayStyles = [
-              {
-                featureType: "all",
-                stylers: [
-                  { saturation: -90 },
-                  { lightness: 50 }
-                ]
-              },
-              {elementType: 'labels.text.fill', stylers: [{color: '#ccdee9'}]}
-            ];
-            var map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: -31.197, lng: 150.744},
-              zoom: 9,
-              styles: grayStyles,
-              scrollwheel:  false
-            });
-          }
-          
-        </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap"></script>
-        
-      </div>
 
 
       <div class="row">
@@ -173,22 +128,22 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Buttonwood, California.</h3>
-              <p>Rosemead, CA 91770</p>
+              <h3>Nairobi, Kenya.</h3>
+              <p>104-60400, <br>Chuka</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3>00 (440) 9865 562</h3>
+              <h3>+254 711 846-863</h3>
               <p>Mon to Fri 9am to 6pm</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3>support@colorlib.com</h3>
-              <p>Send us your query anytime!</p>
+              <h3>henrykirema1@gmail.com</h3>
+              <p>Send me your query anytime!</p>
             </div>
           </div>
         </div>
@@ -198,60 +153,59 @@
   <!-- ================ contact section end ================= -->
 
     <!-- footer start -->
-    <footer class="footer">
-            <div class="footer_top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <div class="lets_talk">
-                                <h3>Do you have any Project? <a href="#">Let’s Talk</a> </h3>
-                                <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget tincidunt tortor tempus.</p>
-                            </div>
+<footer class="footer">
+        <div class="footer_top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8">
+                        <div class="lets_talk">
+                           <center> <h3>Do you have any Project? <a href="#">Let’s Talk</a> </h3>
+                            <p>Contact me today to enjoy ultimate services at convenient offers</p></center>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Behance</span>
-                                <a href="#"> <i class="fa fa-behance"></i> </a>
-                            </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="single_links d-flex justify-content-between align-items-center">
+                            <span>Twitter</span>
+                            <a href="#"> <i class="fa fa-twitter"></i> </a>
                         </div>
-                        <div class="col-md-3">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Dribbble</span>
-                                <a href="#"> <i class="fa fa-dribbble"></i> </a>
-                            </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="single_links d-flex justify-content-between align-items-center">
+                            <span>Facebook</span>
+                            <a href="#"> <i class="fa fa-facebook-f"></i> </a>
                         </div>
-                        <div class="col-md-3">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Medium</span>
-                                <a href="#"> <i class="fa fa-medium"></i> </a>
-                            </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="single_links d-flex justify-content-between align-items-center">
+                            <span>Github</span>
+                            <a href="#"> <i class="fa fa-github"></i> </a>
                         </div>
-                        <div class="col-md-3">
-                            <div class="single_links d-flex justify-content-between align-items-center">
-                                <span>Linkedin</span>
-                                <a href="#"> <i class="fa fa-linkedin"></i> </a>
-                            </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="single_links d-flex justify-content-between align-items-center">
+                            <span>Linkedin</span>
+                            <a href="#"> <i class="fa fa-linkedin"></i> </a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="copy-right_text">
-                <div class="container">
-                    <div class="footer_border"></div>
-                    <div class="row">
-                        <div class="col-xl-12">
-                            <p class="copy_right text-center">
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-                        </div>
+        </div>
+        <div class="copy-right_text">
+            <div class="container">
+                <div class="footer_border"></div>
+                <div class="row">
+                    <div class="col-xl-12">
+                        <p class="copy_right text-center">
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |<a href="#" target="_blank"> Keivyle Developers</a>
+                        </p>
                     </div>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
         <!--/ footer end  -->
 
 
