--- a/services.html
+++ b/services.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Jony</title>
+    <title>Services</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/project.png">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
@@ -44,41 +44,23 @@
                             <div class="col-xl-3 col-lg-2">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/logo.png" alt="">
+                                        <img src="img/henry1.png" alt="">
                                     </a>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-7">
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
-                                        <ul id="navigation">
+                                       <ul id="navigation">
                                             <li><a href="index.html">home</a></li>
-                                            <li><a href="Works.html">Works</a></li>
+                                            <!-- <li><a href="Works.html">Works</a></li>  -->
                                             <li><a href="Services.html">Services</a></li>
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                        <li><a href="works_details.html">work details</a></li>
-                                                        <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li>
-                                            <li><a href="about.html">about</a></li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
-                                <div class="Appointment">
-                                    <div class="book_btn d-none d-lg-block">
-                                        <a href="#">Let’s Talk</a>
-                                    </div>
-                                </div>
                             </div>
                             <div class="col-12">
                                 <div class="mobile_menu d-block d-lg-none"></div>
@@ -107,18 +89,25 @@
             <!--/ bradcam_area  -->
 
     <!-- service_area start  -->
-    <div class="service_area colord_bg">
+    <div class="service_area">
         <div class="container">
+            <div class="row">
+                <div class="col-xl-12">
+                    <div class="section_title mb-50">
+                        <center><h3>My Services</h3></center>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service text-center">
                         <div class="icon">
-                            <img src="img/svg_icon/1.svg" alt="">
+                            <img src="img/svg_icon/android.svg" alt="">
                         </div>
                         <h3>
-                                Web & Mobile Design
+                                Mobile Apps Design
                         </h3>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
+                        <p>Looking to promote your business through enhanced customer engagement, improved customer experience and increase your brand visibility by developing a customized app for your business today  </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
@@ -129,8 +118,7 @@
                         <h3>
                                 Web Development
                         </h3>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
-                    </div>
+                        <p>Personal Websites, Business Websites, E-commerce Websites, Informational Websites, Social Media Websites, Entertainment Websites, Nonprofit Websites, Forums and Community Websites, Portfolio Websites, Landing Pages, Educational Websites, Government Websites & News Websites      </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="single_service text-center">
@@ -138,144 +126,53 @@
                             <img src="img/svg_icon/3.svg" alt="">
                         </div>
                         <h3>
-                                E-commerce
+                                POS & ERPs
                         </h3>
-                        <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem vitae tristique ante ibero</p>
+                        <p>Point Of Sale Softwares for Supermarkets, Cafterias, Chemists and Pharmacy Stores</p>
                     </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/6.svg" alt="">
+                        </div>
+                        <h3>
+                                CCTV Installations
+                        </h3>
+                        <p>We offer CCTV installations for homes, large scale aparments and business premises</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/7.svg" alt="">
+                        </div>
+                        <h3>
+                                Computing Equipments Repairs & Servicing
+                        </h3>
+                        <p>Offering serivices on Computers, laptops, printers repairs and Servicing & Software installations</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="single_service text-center">
+                        <div class="icon">
+                            <img src="img/svg_icon/wifi.svg" alt="">
+                        </div>
+                        <h3>
+                                Network, Internet & WiFi Installation
+                        </h3>
+                        <p>Internet installation services raging from homes, small scale to large scale firms</p>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
     <!-- service_area end  -->
 
-    <div class="service_products">
-
-        <div class="container">
-            <div class="service_wrap">
-                <div class="row align-items-center">
-                    <div class="col-md-6 col-lg-5">
-                        <div class="thumb">
-                            <img src="img/service/1.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div class="service_text padding_left">
-                            <h3>Product Packaging </h3>
-                            <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante.
-                                Donec massa velit, varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed
-                                libero varius vulputate. Ut a mi tempus massa </p>
-                            <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras
-                                pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget </p>
-                            <a href="works_details.html" class="boxed-btn3-line">View Project</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="service_wrap">
-                <div class="row align-items-center">
-                        <div class="col-lg-6 col-md-6">
-                                <div class="service_text ">
-                                    <h3>Mockup Design</h3>
-                                    <p>Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante.
-                                        Donec massa velit, varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed
-                                        libero varius vulputate. Ut a mi tempus massa </p>
-                                    <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras
-                                        pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget </p>
-                                    <a href="works_details.html" class="boxed-btn3-line">View Project</a>
-                                </div>
-                            </div>
-                    <div class="col-md-6 col-lg-6">
-                        <div class="thumb padding_left">
-                            <img src="img/service/2.png" alt="">
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
-    </div>
 
         <!-- testimonial_area  -->
-        <div class="testimonial_area ">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="section_title">
-                            <h3>What Clients say</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="testmonial_active owl-carousel">
-                            <div class="single_carousel">
-                                <div class="row">
-                                    <div class="col-xl-9 col-md-9">
-                                        <div class="single_testmonial">
-                                            <p>“There are many variations of passages of Lorem Ipsum available, but the majority
-                                                have suffered alteration in some form by injected humour or randomised words
-                                                which don’t look even slightly believable. If you are going to use a passage.
-                                            </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                    <img src="img/case/testmonial.png" alt="">
-                                                </div>
-                                                <div class="author_name">
-                                                    <h3>Kalvin Piterson</h3>
-                                                    <span>Business Owner</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single_carousel">
-                                <div class="row">
-                                    <div class="col-xl-9 col-md-9">
-                                        <div class="single_testmonial">
-                                            <p>“There are many variations of passages of Lorem Ipsum available, but the majority
-                                                have suffered alteration in some form by injected humour or randomised words
-                                                which don’t look even slightly believable. If you are going to use a passage.
-                                            </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                    <img src="img/case/testmonial.png" alt="">
-                                                </div>
-                                                <div class="author_name">
-                                                    <h3>Kalvin Piterson</h3>
-                                                    <span>Business Owner</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single_carousel">
-                                <div class="row">
-                                    <div class="col-xl-9 col-md-9">
-                                        <div class="single_testmonial">
-                                            <p>“There are many variations of passages of Lorem Ipsum available, but the majority
-                                                have suffered alteration in some form by injected humour or randomised words
-                                                which don’t look even slightly believable. If you are going to use a passage.
-                                            </p>
-                                            <div class="testmonial_author">
-                                                <div class="thumb">
-                                                    <img src="img/case/testmonial.png" alt="">
-                                                </div>
-                                                <div class="author_name">
-                                                    <h3>Kalvin Piterson</h3>
-                                                    <span>Business Owner</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+
         <!-- /testimonial_area  -->
     
 
@@ -286,28 +183,28 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="lets_talk">
-                            <h3>Do you have any Project? <a href="#">Let’s Talk</a> </h3>
-                            <p>Sed eleifend sed nibh nec fringilla. Donec eu cursus sem, vitae tristique ante. Cras pretium rutrum egestas. Integer ultrices libero sed justo vehicula, eget tincidunt tortor tempus.</p>
+                           <center> <h3>Do you have any Project? <a href="#">Let’s Talk</a> </h3>
+                            <p>Contact me today to enjoy ultimate services at convenient offers</p></center>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Behance</span>
-                            <a href="#"> <i class="fa fa-behance"></i> </a>
+                            <span>Twitter</span>
+                            <a href="#"> <i class="fa fa-twitter"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Dribbble</span>
-                            <a href="#"> <i class="fa fa-dribbble"></i> </a>
+                            <span>Facebook</span>
+                            <a href="#"> <i class="fa fa-facebook-f"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Medium</span>
-                            <a href="#"> <i class="fa fa-medium"></i> </a>
+                            <span>Github</span>
+                            <a href="#"> <i class="fa fa-github"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -326,8 +223,7 @@
                     <div class="col-xl-12">
                         <p class="copy_right text-center">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved!!<a href="#" target="_blank"> Keivyle Developers</a>
                         </p>
                     </div>
                 </div>
