--- a/index.html
+++ b/index.html
@@ -368,14 +368,14 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <span>Twitter</span>
+                            <a href="https://twitter.com/"><span>Twitter</span></a>
                             <a href="#"> <i class="fa fa-twitter"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
                             <span>Facebook</span>
-                            <a href="#"> <i class="fa fa-facebook-f"></i> </a>
+                            <a href="https://twitter.com/"> <i class="fa fa-facebook-f"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
