--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
                             <a href="https://twitter.com/"><span>Twitter</span></a>
-                            <a href="#"> <i class="fa fa-twitter"></i> </a>
+                            <a href="https://twitter.com/"> <i class="fa fa-twitter"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
