--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="col-lg-9">
                         <div class="slider_text">
                            <center><h3>Hi there, I am Henry <br> 
-                                                            <hr>
+                                                            <br>
                                 <span>Computer Scientist & IT Consultant</span></h3></center>
                         </div>
                     </div>
@@ -368,14 +368,14 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <a href="https://twitter.com/"><span>Twitter</span></a>
-                            <a href="https://twitter.com/"> <i class="fa fa-twitter"></i> </a>
+                            <a href="#"><span>Twitter</span></a>
+                            <a href="#"> <i class="fa fa-twitter"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
                             <span>Facebook</span>
-                            <a href="https://twitter.com/"> <i class="fa fa-facebook-f"></i> </a>
+                            <a href="#"> <i class="fa fa-facebook-f"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
