--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                           <center><h4>Hi there, I am Henry <br> 
-                                                            <br>
-                                <span>Computer Scientist & IT <br> Consultant</span></h4></center>
+                           <h3>Hi there, I am Henry <br> 
+                                                            <hr>
+                                <span>Computer Scientist & IT Consultant</span></h3>
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
@@ -368,8 +368,8 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="single_links d-flex justify-content-between align-items-center">
-                            <a href="#"><span>Twitter</span></a>
-                            <a href="#"> <i class="fa fa-twitter"></i> </a>
+                            <a href="https://twitter.com/"><span>Twitter</span></a>
+                            <a href="https://twitter.com/"> <i class="fa fa-twitter"></i> </a>
                         </div>
                     </div>
                     <div class="col-md-3">
