--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                           <h3>Hi there, I am Henry <br> 
+                           <h3>Hi there, I am Henry<br><br><br><br><br><br>
                                                             <hr>
                                 <span>Computer Scientist & IT Consultant</span></h3>
                         </div>
