--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             <div class="container">
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
-                        <div class="slider_text">
-                           <h3>Hi there, I am Henry<br><br><br><br><br><br>
+                        <div class="slider_text"><br><br><br><br><br><br>
+                           <h3>Hi there, I am Henry<br>
                                 <span>Computer Scientist & IT Consultant</span></h3>
                         </div>
                     </div>
