--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
-                    <img src="img/about/file.png" alt="">
+                    <img src="img/about/0.png" alt="">
                     </div>
                 </div>
             </div>
