--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text"><br><br><br><br><br><br>
-                           <h3>Hi there, I am Henry <br> 
+                          <center> <h3>Hi there, I am Henry <br> 
                                                            
-                                <span>Computer Scientist & IT Consultant</span></h3>
+                                <span>Computer Scientist & IT Consultant</span></h3></center>
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
